<resources>
    <string name="app_name">Festival PF XIII</string>
    <string name="ham_menu">menu</string>
    <string name="init_img">XIII International festival of folklore</string>
    <string name="home_menu">Home page</string>
    <string name="flag">Flag</string>
    <string name="sponsor_desc">Sponsors</string>
    <string name="ticket_img">Ticket</string>
    <string name="blank"> </string>
    <string name="back_bt">back button</string>
    <string name="nic_img">Picture of Nicolas</string>
    <string name="rom_img">Picture of Romulo</string>
    <string name="fla_img">Picture of Flavio</string>
    <string name="watch_img">Spot watch</string>
    <string name="curtain">Curtain event</string>
    <string name="map">Map</string>
    <string name="soon">Soon.\n\nKeep your app up to date to receive our news!</string>
    <string name="button_schedule">SCHEDULE</string>
    <string name="button_groups">GROUPS</string>
    <string name="button_info">INFO</string>
    <string name="button_sponser">SPONSORS</string>
    <string name="button_dev">DEV</string>
    <string name="button_aof">AOFFRS</string>
    <string name="button_config">SETTINGS</string>
    <string name="title_init_screen">International Festival of Folklore of Passo Fundo</string>
    <string name="text_init_screen">
        In the XIII edition of the International Festival of Folklore of Passo Fundo, we will receive 14 groups
        from different parts of the world.\n
        In addition to the interaction with the community during the different workshops, the groups will also
        share their culture through dance and music.
    </string>
    <string name="title_ticket">Tickets</string>
    <string name="text_ticket">
        Opening <b>August 12th, 2016</b> and Closing <b>August 20th, 2016</b> : \n
        - <b>Full-price</b>: R$16,00 e <b>Half-price</b>: R$8,00 (students with ID and 60-year-old
        or over people presenting ID, according to Municipal laws number 2.946 and 2931). \n\n

        Other nights from August 13th to August 19th, 2016: \n
        - <b>Full-price</b>: R$10,00 e <b>Half-price</b>: R$5,00 (students, 60-years-old or over people and workers). \n\n

        Tickets sale: from <b>August 8th, 2016</b> - from 1pm to 7 pm in Gare Park, Culture Big House (main stage) . \n\n
        <b>shopping distance</b> - Phone: (0xx54) 9101 8100 ou (0xx54) 3311 1623 – with Iracema. \n\n

        <b>Observations:</b> For nights shows from <b>August 13,2016</b> to <b>August 19,2016</b>, who buy advance tickets
        until <b>1 day before</b> of shows, are entitled to <b>half-price</b>.
    </string>
    <string name="phone">+55 54 3045 1415\n+55 54 9981 1893</string>
    <string name="email">cioffrs@annex.com.br</string>
    <string name="place">Parque da Gare\nVila Lucas Araujo\nPasso Fundo - RS</string>
    <string name="site">festivalpf.com.br</string>
    <string name="youtube">YouTube</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="call">Which number you want to call?</string>
    <string name="call_confirm">Call</string>
    <string name="call_deny">Cancel</string>
    <string name="dev_title">Developers</string>
    <string name="romulo">Rômulo Reis de Oliveira</string>
    <string name="romulo_dev">Android code and Back-End Structure</string>
    <string name="nicolas">Nícolas Meira da Silva Schirmer</string>
    <string name="nicolas_dev">Android code, UI/UX and Back-End</string>
    <string name="flavio">Flávio Lemos Porto</string>
    <string name="flavio_dev">Project Analyst</string>
    <string name="license">Licences</string>
    <string name="license_menu">
        <b>Sliding Menu</b>\n
        <a href="https://github.com/jfeinstein10/SlidingMenu/">https://github.com/jfeinstein10/SlidingMenu</a>\n
        License: <a href="http://www.apache.org/licenses/LICENSE-2.0/">Apache</a>
    </string>
    <string name="license_button">
        <b>Fancy Buttons</b>\n
        <a href="https://github.com/medyo/Fancybuttons/">https://github.com/medyo/Fancybuttons</a>\n
        License: <a href="http://opensource.org/licenses/MIT/">MIT</a>
    </string>
    <string name="license_dialog">
        <b>Material Dialog</b>\n
        <a href="https://github.com/afollestad/material-dialogs/">https://github.com/afollestad/material-dialogs</a>\n
        License: <a href="http://opensource.org/licenses/MIT/">MIT</a>
    </string>
    <string name="license_indicator">
        <b>Circle Indicator</b>\n
        <a href="https://github.com/ongakuer/CircleIndicator/">https://github.com/ongakuer/CircleIndicator</a>\n
        License: <a href="http://www.apache.org/licenses/LICENSE-2.0/">Apache</a>
    </string>
    <string name="realization">Realization</string>
    <string name="sponsorship">Sponsors</string>
    <string name="support">Suport</string>
    <string name="promotion">Promotion</string>
    <string name="today">Today</string>
    <string name="title_schedule">Schedulle</string>
    <string name="title_groups">Groups</string>
    <string name="g0name">ESTAMPAS NORTEÑAS</string>
    <string name="g0country">Argentina</string>
    <string name="g0desc"><b>The ASOCIACIÓN FOLKLÓRICA ESTAMPAS NORTEÑAS</b>, from Pirané - Formosa - Argentina, It began in May 1988 when a group of people, mostly young people, decided to form an organization to rescue, promote and project the true traditional culture of Argentina in general and especially formosenha particularly. He has in his direction Professor Ruben Luciano Vergara.\n\n The busy experience has been very valuable, managing to fill with hard work and sacrifice, a prominent place among the institutions of this type, having materialized activities and upcoming projects for our people and Taiwan province.\n\n
        It was incorporated into the National Section of CIOFF Argentina, sharing not only ideal, but actively working to meet the multiple objectives of Section, <b>World CIOFF</b> and <b>UNESCO.</b></string>
    <string name="g1name">Royal Art group Alkuone</string>
    <string name="g1country">Belgium</string>
    <string name="g1desc"><b>In 1957 Mr. Oscar Van Malder</b>, physical education teacher and dancer in Elza Darciel Dance Academy, started a group of flags launchers in "School Technica VTI" in the city of Aalst in Belgium Monarchist. Today, the Royal Group Artistic Alkuone is a dynamic group of teenagers with a passion for dance choreography, ballet with flags, drums and launch acrobatic flags. About 60 years ago, Alkuone makes performances - very successfully - in Belgium and in countries like the United States, Canada, China, Thailand, Qatar and most European countries. \n\n
        Launch flags is a Flemish tradition. Alkuone presents it in a modern and spectacular way. For folk festivals the group performs the launch of traditional banners with percussion music. In traditional dress Real Group Artistic Alkuone brings movement and color in every parade, procession or show in the outdoors. Each year, Alkuone participates to the historical parade "De Ommegang" in the center of Brussels. \n\n
        The Real Group Artistic Alkuone also makes thematic shows and cooperate enthusiastically in the demonstrations and large-scale shows. Alkuone offers a varied program of dance, ballet flags and launching flags outdoors and on a stage inside.</string>
    <string name="g2name">Studio Dance and Art Expressions - SDAE</string>
    <string name="g2country">Bolivia</string>
    <string name="g2desc"><b>Dance Studio and Art Expressions - (SDAE- Bolivia)</b>, directed by Mauricio Gustavo Fernández García, has 8 years of training, and has at its base people linked to popular art and traditional dance of Bolivia. Are dancers with technique and interpretation. The institution works in the city of Cochabamba and has participated in festivals in Chile and Argentina. Your goal is to bring the folklore of Bolivia in its simplicity and splendor all. It has highlighted in its clothing and choreography originating in Bolivia.</string>
    <string name="g3name">Easter Island - Tumu Henua</string>
    <string name="g3country">Chile</string>
    <string name="g3desc"><b>Rapa Nui Tumu Henua</b> founded in 1989 with deep inspiration and rescue INCREASING culture through music and dance Rapa Nui. The Group\'s main objective is the rescue of the Rapa Nui culture. \n\n
        This is a job that could succeed throughout Chile and out of this, countries like France, Belgium, Holland, Germany, Poland, Switzerland, Italy, Spain, Taiwan ABORIGINAL FESTIVAL, Argentina, Peru and 6 times in Brazil and now returns to Passo Fundo after 14 years. Its Director and leader for 27 years is DON MIGUEL MUÑOZ (MIHA).</string>
    <string name="g4name">International Folkloric Ballet Sonia Gómes</string>
    <string name="g4country">Colombia</string>
    <string name="g4desc"><b>The International Folkloric Ballet Sonia Gómes</b>, was founded in 1999, in the department (state) of Huila, in order to respond to the efforts for years took place in the region of Huila, and with the intention of preserving the Colombian culture through a professional group and to allow the development of dance, especially for children and young huilenses. \n\n
        From the effort, dedication and research on the Colombian folklore, this being consolidated as one of the departments (states) most representative of Colombia, and this has allowed plant in the hearts of children and young people love the cultural wealth of the region. \n\n
        International Folkloric Ballet Sonia Gómes, currently has 60 children and young people who dedicate themselves to "do" the dance in Huliense Academy of Dance and Ballet itself is touting the cultural heritage of his Department and Colombia. It has presented in several countries, their show with great success. In its Department (state), is considered the best group of folk and traditional dances. \n\n
        Has participated in international festivals in Nicaragua, United States, Canada, Costa Rica, Dominican Republic, Ecuador, Mexico, Peru and Argentina. This is his first participation in Brazil.</string>
    <string name="g5name">WICI Song &amp; Dance Theatre</string>
    <string name="g5country">USA</string>
</resources>