<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/rounded_corner"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/dev_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <LinearLayout
        android:id="@+id/lay_rom"
        android:clickable="true"
        android:onClick="romClick"
        android:background="@drawable/selector"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:layout_below="@+id/textView4"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/rom"
            android:contentDescription="@string/rom_img"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <TextView
            android:text="@string/romulo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/romulo_dev"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:id="@+id/linedev1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/light_gray"
        android:layout_below="@+id/lay_rom" />

    <LinearLayout
        android:id="@+id/lay_nic"
        android:clickable="true"
        android:onClick="nicClick"
        android:background="@drawable/selector"
        android:padding="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/linedev1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/nic"
            android:contentDescription="@string/nic_img"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <TextView
            android:text="@string/nicolas"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/nicolas_dev"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>