<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/rounded_corner_wselector"
    android:clickable="true"
    android:layout_margin="10dp"
    android:elevation="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:text="@string/title_ticket"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/whitePure"
        android:background="@drawable/rounded_corner_top_primary"
        android:gravity="center"
        android:padding="14dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/ticket"
        android:contentDescription="@string/ticket_img"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView" />

    <TextView
        android:id="@+id/textTicket"
        android:text="@string/text_ticket"
        android:textSize="13sp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView" />

</RelativeLayout>