<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.fifxiii.menu"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_menu"
    android:padding="30dp">

    <!--TO-DO: QUANDO ESTIVER EM ALGUMA PAGINA, DEIXAR BACKGROUND BOTAO PRIMARYCOLOR
    NO MOMENTO O FUNDO TA TRANSPARENTE-->

    <!--font awesome como icon http://fontawesome.io/cheatsheet/ -->
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/calendarBtn"
        android:padding="15dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_iconPaddingRight="20dp"
        fancy:fb_fontIconResource="&#xf073;"
        fancy:fb_borderColor="@color/white"
        fancy:fb_borderWidth="1dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/button_calendar"
        fancy:fb_textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/groupsBtn"
        android:padding="15dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_iconPaddingRight="20dp"
        fancy:fb_fontIconResource="&#xf0ac;"
        fancy:fb_borderColor="@color/white"
        fancy:fb_borderWidth="1dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/button_groups"
        fancy:fb_textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/infoBtn"
        android:padding="15dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_iconPaddingRight="20dp"
        fancy:fb_fontIconResource="&#xf05a;"
        fancy:fb_borderColor="@color/white"
        fancy:fb_borderWidth="1dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/button_info"
        fancy:fb_textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/sponserBtn"
        android:padding="15dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_iconPaddingRight="20dp"
        fancy:fb_fontIconResource="&#xf0c0;"
        fancy:fb_borderColor="@color/white"
        fancy:fb_borderWidth="1dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/button_sponser"
        fancy:fb_textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/devBtn"
        android:padding="15dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_iconPaddingRight="20dp"
        fancy:fb_fontIconResource="&#xf121;"
        fancy:fb_borderColor="@color/white"
        fancy:fb_borderWidth="1dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/button_dev"
        fancy:fb_textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/configBtn"
        android:padding="15dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_iconPaddingRight="20dp"
        fancy:fb_fontIconResource="&#xf013;"
        fancy:fb_borderColor="@color/white"
        fancy:fb_borderWidth="1dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/button_config"
        fancy:fb_textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
